video search icon on small screen fixed

--- a/src/components/pages/topic/video_articles/video_articles.css
+++ b/src/components/pages/topic/video_articles/video_articles.css
@@ -513,8 +513,11 @@ input {
   .search input {
     width: 90%;
     border-radius: 5px;
-    padding: 6px 12px;
     box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
+  }
+
+  .a-search {
+    left: 8%;
   }
 
   .article-card-container {
